--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="./images/cute-cat-logo.jpg" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -17,11 +18,16 @@
   <body>
     <!-- Navbar Section  -->
     <nav>
-      
+      <a class="navbar-brand mb-0 h1">
+        <img src="./img/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <span style="color: #c9ab81;">
+          RDJ Auction
+         </span>
+      </a>
       <div id="links">
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="main.html">START AUCTION</a></li>
+          <li><a href="./index.html" class="active">HOME</a></li>
+          <li><a href="./main.html">START AUCTION</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
@@ -31,16 +37,14 @@
     <!-- Auction Section  -->
     <div class="auction">
       <h1>Auctions</h1>
-      <div class="auctions">
-        <h2 class="subheading-1">Upcoming Auctions</h2>
-        <h2 class="subheading-2">Past Auctions</h2>
+      <div class="auctions"> 
         <h3><i class="fa-solid fa-gavel bid"></i>BID NOW</h3>
       </div>
     </div>
 
     <!-- Upcoming Auction Section 1  -->
     <div class="product-1">
-      <img src="./images/image1.jpg" class="productImg" />
+      <img src="./images/cute-cat-logo.jpg" class="productImg" />
       <div class="productDetails-1">
         <h1 class="live-auction">
           LIVE AUCTION <i class="fa-solid fa-video camera"></i>
