--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Upcoming Auction Section 1  -->
     <div class="product-1">
-      <img src="./images/cute-cat-logo.jpg" class="productImg" />
+      <img src="./images/slide8.jpg" class="productImg" />
       <div class="productDetails-1">
         <h1 class="live-auction">
           LIVE AUCTION <i class="fa-solid fa-video camera"></i>
@@ -67,8 +67,11 @@
         </p>
         <br />
         <div class="buttons">
-          <button class="registerButton">REGISTER NOW</button>
-          <button class="catalogButton">VIEW CATALOG (423)</button>
+          <a href="./main.html">
+
+            <button class="registerButton">REGISTER NOW</button>
+          </a>
+          <!-- <button class="catalogButton">VIEW CATALOG (423)</button> -->
         </div>
       </div>
     </div>
@@ -97,7 +100,7 @@
 
     <!-- Upcoming Auction Section 2  -->
     <div class="product-2">
-      <img src="./images/image2.jpg" class="productImg" />
+      <img src="./images/slide2.jpg" class="productImg" />
       <div class="productDetails-2">
         <h1 class="live-auction">
           LIVE AUCTION <i class="fa-solid fa-video camera"></i>
@@ -120,8 +123,8 @@
         </p>
         <br />
         <div class="buttons">
-          <button class="registerButton">REGISTER NOW</button>
-          <button class="catalogButton">VIEW CATALOG (423)</button>
+          <!-- <button class="registerButton">REGISTER NOW</button>
+          <button class="catalogButton">VIEW CATALOG (423)</button> -->
         </div>
       </div>
     </div>
